Up until section 8.3

--- a/astro400B_lecture_11.tex
+++ b/astro400B_lecture_11.tex
@@ -354,5 +354,10 @@ and
 \begin{equation}
 t_0 - t_e = \frac{1}{H_0}\int_0^z \frac{dz'}{(1+z')^{2}} = \frac{1}{H_0}\frac{z}{(1+z)}~\mathrm{for}~\Omega = 0.
 \end{equation}
+\noindent
+In the matter dominated era, we have
+\begin{equation}
+t_e \approx \frac{2}{3H_0\sqrt{\Omega_m}}\frac{1}{(1+z)^{3/2}}~\mathrm{when}~\frac{\Omega_m}{\Omega_r}\gg1+z \gg \left(\frac{\Omega_{\Lambda}}{\Omega_m}\right)^{1/3}~\mathrm{and}~\frac{1}{\Omega_m}.
+\end{equation}
 
 \end{document}
