Working on HW#4 solutions.

--- a/astro400B_lecture_11.tex
+++ b/astro400B_lecture_11.tex
@@ -194,7 +194,7 @@ mass within the sphere.  If the sphere
 is large enough that pressure forces are small, then
 the force on a object of mass $m$ at radius $r$ is
 \begin{equation}
-m \frac{d^2 r}{dt^2} - \frac{G m M(<r)}{r^2} = - \frac{4\pi Gm}{3}\rho(t)r.
+m \frac{d^2 r}{dt^2} = - \frac{G m M(<r)}{r^2} = - \frac{4\pi Gm}{3}\rho(t)r.
 \end{equation}
 \noindent
 The radius of the sphere of matter is expanding with the
@@ -214,7 +214,7 @@ We can multiply by $\dot{R}(t)$ to find
 where $t_0$ is the present day.  We then integrate to find
 \begin{equation}
 \label{eqn:friedman_B}
-\dot{R}^2(t) = \frac{8\pi G}{3}\rho(t) R^2(r) - kc^2
+\dot{R}^2(t) = \frac{8\pi G}{3}\rho(t) R^2(t) - kc^2
 \end{equation}
 \noindent
 where $k$ is a constant of integration.  Turns out Equation
