Revised lecture 12 title.

--- a/astro400B_lecture_12.tex
+++ b/astro400B_lecture_12.tex
@@ -3,7 +3,7 @@
 \usepackage{amssymb}
 
 %title material
-\title{Astronomy 400B Lecture X: YYY}
+\title{Astronomy 400B Lecture 12: Structure Formation Cont.}
 \author{Brant Robertson}
 \date{April, 2015}
 
