Done with chapter 8.

--- a/astro400B_lecture_12.tex
+++ b/astro400B_lecture_12.tex
@@ -168,4 +168,63 @@ that to reach $\delta\sim1$ by the present day we would need that at $z_{rec}\ap
 the overdensity would need to be $\delta\gtrsim10^{-3}$.  But the typical
 flucutations in the CMB are $\sim 2\times 10^{-5}$.  How can we possibly generate
 structure by the present day?  We need dark matter!
+
+\section{Dark Matter}
+The amount of dark matter far outweighs normal matter. 
+DM has to electromagnetic interaction, but may have weak
+force interactions and certainly participates in the 
+gravitational force. Since DM doesn't feel the EM force,
+pressure forces from either radiation or normal matter
+don't directly impact the formation of DM structures
+(although indirectly they can, through their gravitational
+effects and different spatial distributions).
+
+Revisiting the Jeans mass argument for dark matter with
+density $\rho_w$ and sound speed $c_w$, we find that
+\begin{equation}
+M_{J,w} = \frac{\pi}{6} \rho_w \left(\frac{\pi c_w^2}{G\rho_w}\right)^{3/2}.
+\end{equation}
+\noindent
+While DM is relativistic in the early universe, the Jeans
+mass is high and grows like in the radiation-dominated case.
+But once $c_w\ll c/\sqrt{3}$, the Jeans mass declines substantially.
+Roughly, dense clumps of dark matter that are larger than the
+horizon when they become non-relativistic now being to collapse.
+The more massive the DM particle, the smaller the horizon scale
+when they become non-relativistic, and the smaller the clumps they
+form.
+
+Neutrinos have low-masses, and stay relativistic until $\sim t_{eq}$
+when the comoving size of the horizon is $\sim 16 (h^2 \Omega_m)^{-1}~\Mpc$.
+If most of the dark matter was neutrinos, then structures on scales
+smaller than this would not grow efficiently.
+
+However, we think dark matter is cold, such that the masses are $M_w\gtrsim~1~\mathrm{GeV}$.
+Such particles become non-relativistic when $T<10^{13}\K$, which happens
+at $10^{-6}~\s$.  The mass within the horizon at this time was $<\Msun$.
+
+\section{Virialization of DM Halos}
+An overdense region will expand until its self gravity can
+overcome the universal expansion. We call the time when the
+radius of the overdensity turns around and begins to collapse
+relative to the expansion the {\it turn-around time}.  The
+final radius of the region will be at most half the turn around
+radius, and the density will be $\sim 8\times$ greater than at
+turn around.  The density where turn around occurs in linear
+theory is $5.6\times$ the mean density.  Further, during turn
+around the universe background density will decline by another
+factor of $\sim4$.  This means that the virial density of an
+object will be $\sim4\times8\times5.6\sim180$ times the critical
+density  This is often approximated as $200\times$ the critical
+density.  We can then write that the mass $M_{200}$ within a radius $r_{200}$
+containing $200\times$ the critical density is
+\begin{equation}
+M_{200} = \frac{4}{3}\pi r_{200}^3 \times 200 \rho_{\mathrm{crit}} = \frac{100 r_{200}^3 H^2(t)}{G}.
+\end{equation}
+\noindent
+The speed of a circular orbit at that radius is
+\begin{equation}
+V_c^2(r_{200}) = \frac{GM_{200}}{r_{200}},~\mathrm{so}~M_{200}(t)=\frac{V_c^3(r_{200})}{10GH(t)}.
+\end{equation}
+
 \end{document}
