Done with Homework #5 solutions.

--- a/homework_5.tex
+++ b/homework_5.tex
@@ -29,14 +29,14 @@ use Poisson's equation
 \noindent
 to show that these lumps and voids cause fluctuations $\Delta\Phi_k$ in the
 gravitational potential, where $k^2|\Delta\Phi_k|\sim4\pi G\bar{\rho}\ave{\Delta_k^2}^{1/2}$.
-Show that, when $P(k)\propto k$, the {\it Harrison-Zel'dovich} spectrum, $|\Phi_k|$ does
+Show that, when $P(k)\propto k$, the {\it Harrison-Zel'dovich} spectrum, $|\Delta\Phi_k|$ does
 not depend on $k$: the potential is equally `rippled' on all spatial scales.
 
 \section{Sparke \& Gallagher Problem 8.9}
 
 By substituting into the equation
 \begin{equation}
-\ddot{R}(t) = -\frac{4\pi G}{3} R(t)\left[ \rho(t) + \frac{3p(t)}{3}\right]
+\ddot{R}(t) = -\frac{4\pi G}{3} R(t)\left[ \rho(t) + \frac{3p(t)}{c^2}\right]
 \end{equation}
 \noindent
 show that, when vacuum energy dominates the expansion, we have $R(t) \propto \exp(t\sqrt{\Lambda/3})$.
