Added review for final.

--- a/homework_5_solutions.tex
+++ b/homework_5_solutions.tex
@@ -4,7 +4,7 @@
 
 %title material
 \title{Astronomy 400B Homework \#5}
-\author{Please Show Your Work for Full Credit}
+\author{Solutions}
 \date{Due April 30, 2015 by 9:35am}
 
 
