Fixes minor typos.

--- a/final_review.tex
+++ b/final_review.tex
@@ -18,7 +18,7 @@
 \maketitle
 
 %first section
-\section{Letcure 1: Stellar Mass, Luminosity, Flux, Radius, and Temperature}
+\section{Lecture 1: Stellar Mass, Luminosity, Flux, Radius, and Temperature}
 Stellar masses are often expressed in terms of a {\it solar mass} ($\Msun$; mass of the Sun)
 \begin{equation}
 1\Msun = 1.9891\times10^{33}\g
